--- a/style.css
+++ b/style.css
@@ -116,6 +116,17 @@ body {
  border-radius: 5px;
  border: 1px solid whitesmoke;
 }
+.comingSoon{
+ box-sizing: border-box;
+ background-color: white;
+ color: #40196D;
+ font-weight: 600;
+ font-size: 12px;
+ line-height: 16px;
+ padding: 4px;
+ border-radius: 5px;
+ border: 2px solid rgba(128, 128, 128, 0.158);
+}
 .dropdown-item{
     font-size: 13px;
     font-weight: 500;
@@ -138,4 +149,9 @@ body {
 }
 .navbar-toggler:hover{
     border: 2px solid black;
+}
+
+.iconColor{
+    color: #40196D;
+    font-size: 16px;
 }
