--- a/style.css
+++ b/style.css
@@ -53,6 +53,16 @@ body {
         line-height: 18.375px;
         margin: 5px;
 }
+.footerHead {
+    font-size: 16px;
+    font-weight: 700;
+    font-family: 'Mulish',
+        sans-serif;
+        text-decoration: none solid rgb(64, 25, 109);
+        color: #40196D;
+        line-height: 18.375px;
+        margin: 5px;
+}
 .nav-link:hover{
     font-size: 14px;
     font-weight: 700;
@@ -98,6 +108,15 @@ body {
     font-size: 15px;
     font-weight: 700;
 }
+.openAccount{
+    color: #40196D;
+    background-color: white;
+    text-decoration: underline;
+    cursor: pointer;
+    border: none;
+    font-size: 15px;
+    font-weight: 700;
+}
 
 .des{
     font-size: 17.5px;
@@ -105,6 +124,30 @@ body {
     color: #000;
     font-family: 'Mulish',
     sans-serif;
+}
+.desText{
+    font-size: 14px;
+    font-weight: 600;
+    color: #000;
+    font-family: 'Mulish',
+    sans-serif;
+    width: 350px;
+}
+.FText{
+    font-size: 14px;
+    font-weight: 400;
+    color: #000;
+    font-family: 'Mulish',
+    sans-serif;
+text-align: left;
+}
+.desText3{
+    font-size: 15px;
+    font-weight: 500;
+    color: #000;
+    font-family: 'Mulish',
+    sans-serif;
+    width: 350px;
 }
 
 .headText{
@@ -114,6 +157,23 @@ body {
     sans-serif;
     color: #40196D;
     margin-top: 65px;
+}
+.anotherText{
+    font-size: 31.5px;
+    font-weight: 900;
+    font-family: 'Mulish',
+    sans-serif;
+    color: #40196D;
+    margin-top: 65px;
+}
+.thirdText{
+    font-size: 31.5px;
+    font-weight: 900;
+    font-family: 'Mulish',
+    sans-serif;
+    color: #40196D;
+    margin-top: 65px;
+    width: 420px;
 }
 
 
@@ -165,3 +225,52 @@ body {
     color: #40196D;
     font-size: 16px;
 }
+.iColor{
+    color: #40196D;
+    font-size: 30px;
+    text-align: center;
+}
+.iiColor{
+    color: #40196D;
+    font-size: 25px;
+    text-align: center;
+}
+
+.cardText{
+    color: #40196D;
+    font-size: 13.65px;
+    font-weight: 900;
+    align-items: center;
+    text-align: right;
+    text-align: center;
+    padding-left: 20px;
+}
+.card_text{
+    color: #40196D;
+    font-size: 13.65px;
+    font-weight: 900;
+    align-items: center;
+    text-align: center;
+    padding-left: 20px;
+}
+.cardCard{
+    border: 1px solid rgba(255, 255, 255, 0.349);
+    box-shadow: rgb(64, 25, 109);
+
+}
+.secondCard{
+    display: flex;
+    justify-content: center;
+
+}
+.footer{
+    border-top: 2px solid rgba(128, 128, 128, 0.082);
+}
+
+.tFoot{
+    font-size: 13px;
+    color: #000;
+    text-decoration: none;
+}
+
+
